Fix overscroll on notes page, make note cards wrap properly
Closes #9

--- a/resources/public/css/site.less
+++ b/resources/public/css/site.less
@@ -99,12 +99,32 @@
     box-shadow: none;
 }
 
+.form-control.search {
+    max-width: 250px;
+}
+
+.search-bar .rc-input-text {
+    flex-grow: 1 !important;
+}
+
 input.number, input.big-number {
     text-align: center;
 }
 
 .card {
     padding: 1em;
+
+    .card-contents {
+        margin-right: 6em;
+    }
+
+    .card-buttons {
+        float: right;
+        position: absolute;
+        top: 1em;
+        right: 1em;
+        font-size: 16pt;
+    }
 }
 
 .rc-dropdown {
